force-app/main/default/objects/JBT_RET_MYASU_ACCESS_CNT_VW__x/JBT_RET_MYASU_ACCESS_CNT_VW__x.object-meta.xml
<CustomObject>
    <description>Data source script can be found here: https://docs.google.com/document/d/1QnRvd7V0w0gt7P_NRVVfkULW5CQfPIYAOT8wI3joNl4/edit</description>
    <externalDataSource>MuleOdataApi</externalDataSource>
    <externalName>JBT_RET_MYASU_ACCESS_CNT_VWs</externalName>
    <label>MyASU Usage Term (external)</label>
    <pluralLabel>MyASU Usage Term (external)</pluralLabel>
</CustomObject>