force-app/main/default/objects/JBT_RET_MYASU_ACCESS_CNT_VW__x/fields/ACAD_CAREER__c.field-meta.xml
<CustomField>
    <fullName>ACAD_CAREER__c</fullName>
    <description>Data Sourced from ASU_STDNT_PROFILE_MAJ_TERM.ACAD_CAREER</description>
    <externalDeveloperName>ACAD_CAREER</externalDeveloperName>
    <label>Career</label>
    <length>4</length>
    <type>Text</type>
</CustomField>