force-app/main/default/objects/JBT_RET_MYASU_ACCESS_CNT_VW__x/fields/EMPLID__c.field-meta.xml
<CustomField>
    <fullName>EMPLID__c</fullName>
    <description>Data sourced from ASU_STDNT_PROFILE_MAJ_TERM.EMPLID</description>
    <externalDeveloperName>EMPLID</externalDeveloperName>
    <label>Contact</label>
    <length>10</length>
    <referenceTargetField>Contact.EMPLID__c</referenceTargetField>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>MyASU Usage Term (external)</relationshipLabel>
    <relationshipName>MyASU_Usage_Term_external</relationshipName>
    <type>IndirectLookup</type>
</CustomField>