force-app/main/default/objects/JBT_RET_MYASU_ACCESS_CNT_VW__x/fields/SEM_ACCESS_COUNT__c.field-meta.xml
<CustomField>
    <fullName>SEM_ACCESS_COUNT__c</fullName>
    <description>Data Sourced from ASUDW.MA_F_ACCESS_LOG MA_LOG.DERIVED (SEM_ACCESS_COUNT)</description>
    <externalDeveloperName>SEM_ACCESS_COUNT</externalDeveloperName>
    <label>Term Access Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>