force-app/main/default/objects/JBT_RET_MYASU_ACCESS_CNT_VW__x/fields/STRM__c.field-meta.xml
<CustomField>
    <fullName>STRM__c</fullName>
    <description>Data Sourced from ASU_STDNT_PROFILE_MAJ_TERM.STRM</description>
    <externalDeveloperName>STRM</externalDeveloperName>
    <label>Term</label>
    <length>4</length>
    <referenceTargetField>Term__c.PeopleSoft_Code__c</referenceTargetField>
    <referenceTo>Term__c</referenceTo>
    <relationshipLabel>MyASU Usage Term (external)</relationshipLabel>
    <relationshipName>MyASU_Usage_Term_external</relationshipName>
    <type>IndirectLookup</type>
</CustomField>